myteo/test/analyze/name_resolution/duplicate_toplevels_error.myte
module Test

fun foo() {}
val foo: int = 1;

fun bar() {}
fun bar() {}

val baz: int = 1;
val baz: int = 1;

fun main() {}